// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ClusteringDotplot Renders for "none" clustering when requiring conditions and readouts 1`] = `
<div>
  <div
    className="Clustering-header"
  >
    Clustering
  </div>
  <div
    className="Clustering-introduction"
  >
    See the
     
    <Component
      className="Clustering-introduction-link"
      to="/help/tools/dotplot"
    >
      help
    </Component>
     
    for clustering options available for this tool.
  </div>
  <CustomField
    label="Clustering type"
    name="clustering"
    onChange={[Function]}
    options={
      Array [
        Object {
          "text": "none",
          "value": "none",
        },
        Object {
          "text": "Hierarchical",
          "value": "hierarchical",
        },
        Object {
          "text": "Biclustering",
          "value": "biclustering",
        },
      ]
    }
    placeHolder="Clustering type..."
    type="select"
  />
  <div
    className="Clustering-none-container"
  >
    <CustomField
      helpMessage="The user can generate dot plots without clustering if desired.
      In this case, a list of condition and readout genes in the desired display order must be
      supplied in the text boxes. Only conditions and readouts entered in the text box will be
      included in the analysis and in the dot plot. Condition and readout names must be entered
      as they appear in the input file name and are case sensitive. In some cases the
      user may want to control which conditions are shown in the dot plot and their ordering,
      while wanting to show and cluster all readouts, or vice versa. This can be done as well
      by selecting \\"cluster all\\" under the condition or readout options menu."
      label="Condition options"
      name="conditionClustering"
      onChange={[Function]}
      options={
        Array [
          Object {
            "text": "Supply conditions",
            "value": "none",
          },
          Object {
            "text": "Cluster all conditions",
            "value": "conditions",
          },
        ]
      }
      placeHolder="Condition options..."
      type="select"
    />
    <CustomField
      label="Conditions"
      name="conditionList"
      onChange={[Function]}
      placeHolder="Conditions..."
      type="textArea"
    />
    <CustomField
      helpMessage="The user can generate dot plots without clustering if desired.
      In this case, a list of condition and readout genes in the desired display order must be
      supplied in the text boxes. Only conditions and readouts entered in the text box will be
      included in the analysis and in the dot plot. Condition and readout names must be entered
      as they appear in the input file name and are case sensitive. In some cases the
      user may want to control which conditions are shown in the dot plot and their ordering,
      while wanting to show and cluster all readouts, or vice versa. This can be done as well
      by selecting \\"cluster all\\" under the condition or readout options menu."
      label="Readout options"
      name="readoutClustering"
      onChange={[Function]}
      options={
        Array [
          Object {
            "text": "Supply readouts",
            "value": "none",
          },
          Object {
            "text": "Cluster all readouts",
            "value": "readouts",
          },
        ]
      }
      placeHolder="Readout options..."
      type="select"
    />
    <CustomField
      label="Readouts"
      name="readoutList"
      onChange={[Function]}
      placeHolder="Readouts..."
      type="textArea"
    />
  </div>
  <div
    className="Clustering-checkbox"
  >
    <div
      className="Clustering-checkbox-label"
    >
      Optimize clustering:
    </div>
    <CustomField
      name="clusteringOptimize"
      onChange={[Function]}
      type="switch"
    />
  </div>
</div>
`;

exports[`ClusteringDotplot Renders for "none" clustering when requiring only conditions 1`] = `
<div>
  <div
    className="Clustering-header"
  >
    Clustering
  </div>
  <div
    className="Clustering-introduction"
  >
    See the
     
    <Component
      className="Clustering-introduction-link"
      to="/help/tools/dotplot"
    >
      help
    </Component>
     
    for clustering options available for this tool.
  </div>
  <CustomField
    label="Clustering type"
    name="clustering"
    onChange={[Function]}
    options={
      Array [
        Object {
          "text": "none",
          "value": "none",
        },
        Object {
          "text": "Hierarchical",
          "value": "hierarchical",
        },
        Object {
          "text": "Biclustering",
          "value": "biclustering",
        },
      ]
    }
    placeHolder="Clustering type..."
    type="select"
  />
  <div
    className="Clustering-none-container"
  >
    <CustomField
      helpMessage="The user can generate dot plots without clustering if desired.
      In this case, a list of condition and readout genes in the desired display order must be
      supplied in the text boxes. Only conditions and readouts entered in the text box will be
      included in the analysis and in the dot plot. Condition and readout names must be entered
      as they appear in the input file name and are case sensitive. In some cases the
      user may want to control which conditions are shown in the dot plot and their ordering,
      while wanting to show and cluster all readouts, or vice versa. This can be done as well
      by selecting \\"cluster all\\" under the condition or readout options menu."
      label="Condition options"
      name="conditionClustering"
      onChange={[Function]}
      options={
        Array [
          Object {
            "text": "Supply conditions",
            "value": "none",
          },
          Object {
            "text": "Cluster all conditions",
            "value": "conditions",
          },
        ]
      }
      placeHolder="Condition options..."
      type="select"
    />
    <CustomField
      label="Conditions"
      name="conditionList"
      onChange={[Function]}
      placeHolder="Conditions..."
      type="textArea"
    />
    <CustomField
      helpMessage="The user can generate dot plots without clustering if desired.
      In this case, a list of condition and readout genes in the desired display order must be
      supplied in the text boxes. Only conditions and readouts entered in the text box will be
      included in the analysis and in the dot plot. Condition and readout names must be entered
      as they appear in the input file name and are case sensitive. In some cases the
      user may want to control which conditions are shown in the dot plot and their ordering,
      while wanting to show and cluster all readouts, or vice versa. This can be done as well
      by selecting \\"cluster all\\" under the condition or readout options menu."
      label="Readout options"
      name="readoutClustering"
      onChange={[Function]}
      options={
        Array [
          Object {
            "text": "Supply readouts",
            "value": "none",
          },
          Object {
            "text": "Cluster all readouts",
            "value": "readouts",
          },
        ]
      }
      placeHolder="Readout options..."
      type="select"
    />
  </div>
  <div
    className="Clustering-checkbox"
  >
    <div
      className="Clustering-checkbox-label"
    >
      Optimize clustering:
    </div>
    <CustomField
      name="clusteringOptimize"
      onChange={[Function]}
      type="switch"
    />
  </div>
</div>
`;

exports[`ClusteringDotplot Renders for "none" clustering when requiring only readouts 1`] = `
<div>
  <div
    className="Clustering-header"
  >
    Clustering
  </div>
  <div
    className="Clustering-introduction"
  >
    See the
     
    <Component
      className="Clustering-introduction-link"
      to="/help/tools/dotplot"
    >
      help
    </Component>
     
    for clustering options available for this tool.
  </div>
  <CustomField
    label="Clustering type"
    name="clustering"
    onChange={[Function]}
    options={
      Array [
        Object {
          "text": "none",
          "value": "none",
        },
        Object {
          "text": "Hierarchical",
          "value": "hierarchical",
        },
        Object {
          "text": "Biclustering",
          "value": "biclustering",
        },
      ]
    }
    placeHolder="Clustering type..."
    type="select"
  />
  <div
    className="Clustering-none-container"
  >
    <CustomField
      helpMessage="The user can generate dot plots without clustering if desired.
      In this case, a list of condition and readout genes in the desired display order must be
      supplied in the text boxes. Only conditions and readouts entered in the text box will be
      included in the analysis and in the dot plot. Condition and readout names must be entered
      as they appear in the input file name and are case sensitive. In some cases the
      user may want to control which conditions are shown in the dot plot and their ordering,
      while wanting to show and cluster all readouts, or vice versa. This can be done as well
      by selecting \\"cluster all\\" under the condition or readout options menu."
      label="Condition options"
      name="conditionClustering"
      onChange={[Function]}
      options={
        Array [
          Object {
            "text": "Supply conditions",
            "value": "none",
          },
          Object {
            "text": "Cluster all conditions",
            "value": "conditions",
          },
        ]
      }
      placeHolder="Condition options..."
      type="select"
    />
    <CustomField
      helpMessage="The user can generate dot plots without clustering if desired.
      In this case, a list of condition and readout genes in the desired display order must be
      supplied in the text boxes. Only conditions and readouts entered in the text box will be
      included in the analysis and in the dot plot. Condition and readout names must be entered
      as they appear in the input file name and are case sensitive. In some cases the
      user may want to control which conditions are shown in the dot plot and their ordering,
      while wanting to show and cluster all readouts, or vice versa. This can be done as well
      by selecting \\"cluster all\\" under the condition or readout options menu."
      label="Readout options"
      name="readoutClustering"
      onChange={[Function]}
      options={
        Array [
          Object {
            "text": "Supply readouts",
            "value": "none",
          },
          Object {
            "text": "Cluster all readouts",
            "value": "readouts",
          },
        ]
      }
      placeHolder="Readout options..."
      type="select"
    />
    <CustomField
      label="Readouts"
      name="readoutList"
      onChange={[Function]}
      placeHolder="Readouts..."
      type="textArea"
    />
  </div>
  <div
    className="Clustering-checkbox"
  >
    <div
      className="Clustering-checkbox-label"
    >
      Optimize clustering:
    </div>
    <CustomField
      name="clusteringOptimize"
      onChange={[Function]}
      type="switch"
    />
  </div>
</div>
`;

exports[`ClusteringDotplot Renders for biclustering 1`] = `
<div>
  <div
    className="Clustering-header"
  >
    Clustering
  </div>
  <div
    className="Clustering-introduction"
  >
    See the
     
    <Component
      className="Clustering-introduction-link"
      to="/help/tools/dotplot"
    >
      help
    </Component>
     
    for clustering options available for this tool.
  </div>
  <CustomField
    label="Clustering type"
    name="clustering"
    onChange={[Function]}
    options={
      Array [
        Object {
          "text": "none",
          "value": "none",
        },
        Object {
          "text": "Hierarchical",
          "value": "hierarchical",
        },
        Object {
          "text": "Biclustering",
          "value": "biclustering",
        },
      ]
    }
    placeHolder="Clustering type..."
    type="select"
  />
  <div
    className="Clustering-biclustering-checkbox"
  >
    <div
      className="Clustering-biclustering-checkbox-label"
    >
      Approximate biclustering (faster):
    </div>
    <CustomField
      name="biclusteringApprox"
      onChange={[Function]}
      type="switch"
    />
  </div>
</div>
`;

exports[`ClusteringDotplot Renders for hierarchical 1`] = `
<div>
  <div
    className="Clustering-header"
  >
    Clustering
  </div>
  <div
    className="Clustering-introduction"
  >
    See the
     
    <Component
      className="Clustering-introduction-link"
      to="/help/tools/dotplot"
    >
      help
    </Component>
     
    for clustering options available for this tool.
  </div>
  <CustomField
    label="Clustering type"
    name="clustering"
    onChange={[Function]}
    options={
      Array [
        Object {
          "text": "none",
          "value": "none",
        },
        Object {
          "text": "Hierarchical",
          "value": "hierarchical",
        },
        Object {
          "text": "Biclustering",
          "value": "biclustering",
        },
      ]
    }
    placeHolder="Clustering type..."
    type="select"
  />
  <div
    className="Clustering-hierarchical-container"
  >
    <CustomField
      label="Distance metric"
      name="distance"
      onChange={[Function]}
      options={
        Array [
          Object {
            "text": "binary",
            "value": "binary",
          },
          Object {
            "text": "Canberra",
            "value": "canberra",
          },
          Object {
            "text": "Euclidean",
            "value": "euclidean",
          },
          Object {
            "text": "Jaccard",
            "value": "jaccard",
          },
          Object {
            "text": "Manhattan",
            "value": "manhattan",
          },
          Object {
            "text": "maximum",
            "value": "maximum",
          },
        ]
      }
      placeHolder="Distance metric..."
      type="select"
    />
    <CustomField
      label="Clustering method"
      name="clusteringMethod"
      onChange={[Function]}
      options={
        Array [
          Object {
            "text": "average",
            "value": "average",
          },
          Object {
            "text": "centroid",
            "value": "centroid",
          },
          Object {
            "text": "complete",
            "value": "complete",
          },
          Object {
            "text": "McQuitty",
            "value": "mcquitty",
          },
          Object {
            "text": "median",
            "value": "median",
          },
          Object {
            "text": "single",
            "value": "single",
          },
          Object {
            "text": "ward",
            "value": "ward",
          },
        ]
      }
      placeHolder="Clustering method..."
      type="select"
    />
  </div>
  <div
    className="Clustering-checkbox"
  >
    <div
      className="Clustering-checkbox-label"
    >
      Optimize clustering:
    </div>
    <CustomField
      name="clusteringOptimize"
      onChange={[Function]}
      type="switch"
    />
  </div>
</div>
`;
